--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Javascript Orientado a Objetos</title>
-    </head>
-    <body>
-         <!-- Curso de Javascript - Orientado a Objetos -->
-         <script>
-                
-         </script>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <title>Javascript Orientado a Objetos</title>
+</head>
+
+<body>
+    <!-- Curso de Javascript - Orientado a Objetos -->
+    <script src="index.js">
+    </script>
+</body>
+
 </html>
