--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <!-- Curso de Javascript - Orientado a Objetos -->
-    <script src="index.js">
+    <script src="classesAbstratas.js">
     </script>
 </body>
 
